--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,15 @@ script:
 
 
 
+  #SONARCLOUD
+  - mvn sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=miw-upm-github -Dsonar.login=$SONAR
+
+#Deploy https://iwvg-ecosystem.herokuapp.com/api
+deploy:
+  provider: heroku
+  api_key:
+    secure: $HEROKU
+  on:
+    branch: master
+#  app: iwvg-ecosystem, por defecto, nombre del artefacto
+# ADD SONAR
